<resources>
    <string name="app_name">AZ-Library</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_manage_book">Quản lý sách</string>
    <string name="nav_manage_category">Quản lý danh mục</string>
    <string name="nav_manage_borrow_book">Quản lý mượn sách</string>
    <string name="nav_manage_author">Quản lý tác giả</string>
    <string name="nav_manage_publisher">Quản lý nhà xuất bản</string>
    <string name="nav_statistic">Thống kê</string>
    <string name="nav_manage_rule">Quy định</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>



    <string name="forgot_password">
        <u>Quên mật khẩu?</u>
    </string>
    <string name="forgot_password_back_login">
        <u>Quay lại đăng nhập</u>
    </string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_category">Chọn danh mục</string>


</resources>